--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,8 @@ build-job:       # This job runs in the build stage, which runs first.
     - echo "Compiling the code..."
     - mvn clean install package 
     - echo "Compile complete."
-
+  tags:
+    - linux
 
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
