--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ deploy-job:
   stage: deploy  
   script:
     - echo "Deploying application..."
+    - cp target/myapp-g15.war /opt/tomcat/webapps/
     - echo "Application successfully deployed."
   tags:
     - linux
