--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </dependencies>
 
     <build>
-        <finalName>myapp-CICD</finalName>
+        <finalName>myapp-g17</finalName>
         <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
